--- a/package.json
+++ b/package.json
@@ -21,8 +21,11 @@
     "reason-react": ">=0.7.0"
   },
   "devDependencies": {
+    "autoprefixer": "^9.5.1",
     "bs-platform": "^5.0.4",
     "html-webpack-plugin": "^3.2.0",
+    "postcss-loader": "^3.0.0",
+    "tailwindcss": "^1.0.2",
     "webpack": "^4.0.1",
     "webpack-cli": "^3.1.1",
     "webpack-dev-server": "^3.1.8"
